:lipstick: Add js hint configuration

--- a/src/pages/examples/prelude_to_ruby.mdx
+++ b/src/pages/examples/prelude_to_ruby.mdx
@@ -14,7 +14,7 @@ It was created by _Yakoshi Natsamuto_. The first version was released in 1993; s
 > I created ruby to make the process of engineering easy
 > Yakoshi Natsamuto
 
-```ruby - prelude.rb
+```ruby
 
 # Printing hello world
 puts("Hello, world!")
@@ -51,7 +51,7 @@ end
 Ruby has a strong object-oriented programming foundation. All objects, including primitive types are Objects. All ruby objects
 inherit from the ```BasicObject``` instance. 
 
-```ruby oop_principles
+```ruby
 # Object Oriented Programming principles
 class Student
     def initialize
